--- a/package.json
+++ b/package.json
@@ -50,6 +50,16 @@
     "grunt-sass": "^3.0.2",
     "grunt-scss-lint": "^0.3.8",
     "load-grunt-tasks": "^3.1.0",
-    "node-sass": "^4.9.4"
+    "node-sass": "^4.9.4",
+    "minimatch": ">=3.0.2",
+    "negotiator": ">=0.6.1",
+    "cryptiles": ">=4.1.2",
+    "debug": ">=2.6.9",
+    "hawk": ">=3.1.3",
+    "lodash": ">=4.17.5",
+    "fresh": ">=0.5.2",
+    "mime": ">=1.4.1",
+    "hoek": ">=4.2.1",
+    "ecstatic": ">=2.0.0"
   }
 }
